fix iPad mini layout issue

--- a/stylesheets/_responsive.scss
+++ b/stylesheets/_responsive.scss
@@ -58,7 +58,7 @@
         &:first-of-type {
           margin-top: 0
         }
-        margin-top: $base_spacing + 20;
+        //margin-top: $base_spacing + 20;
       }
     } 
   }
